# drunk-guide-alice

./: .env.xmpl  README.md  main.py  pyproject.toml  requirements.txt  synonyms_finder.py  synonyms_manager.py
NeyralImageProcessing/: camera_demo.py  main.py  option.py  utils.py
constants/: landmark_parser_constants.py
db/: engine.py
handlers/: get_answer.py  get_fact.py  get_help.py  start_game.py
models/: fact.py  landmark.py  main.py
services/landmarks_parser/: landmarks_parser.py  main.py
utils/: text_helpers.py
