[tool.poetry]
name = "Пьяный гид"
version = "0.1.0"
description = ""
authors = ["jotty <bard143games@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
enjalice = "^3.0.0"
aiohttp = "^4.0.0a1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
